--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -24,7 +24,7 @@
   
   <body class="bg-base-200">
   <!--medium / large navbar -->
-    <div class="bg-base-300 py-4 px-4 hidden md:navbar">
+    <div class="bg-base-300 py-4 px-4 hidden md:navbar 2xl:text-xl">
       <div class="flex-1">
         <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
       </div>
