--- a/public/style.css
+++ b/public/style.css
@@ -3354,16 +3354,8 @@ html {
   grid-column-start: 2;
 }
 
-.col-start-1 {
-  grid-column-start: 1;
-}
-
 .col-start-12 {
   grid-column-start: 12;
-}
-
-.row-start-1 {
-  grid-row-start: 1;
 }
 
 .m-4 {
@@ -3410,10 +3402,6 @@ html {
 
 .mb-2 {
   margin-bottom: 0.5rem;
-}
-
-.mb-4 {
-  margin-bottom: 1rem;
 }
 
 .mt-5 {
@@ -3521,10 +3509,6 @@ html {
   grid-template-columns: repeat(3, minmax(0, 1fr));
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .grid-cols-12 {
   grid-template-columns: repeat(12, minmax(0, 1fr));
 }
@@ -3567,10 +3551,6 @@ html {
 
 .gap-4 {
   gap: 1rem;
-}
-
-.gap-2 {
-  gap: 0.5rem;
 }
 
 .gap-7 {
@@ -3678,6 +3658,11 @@ html {
   padding-right: 0.25rem;
 }
 
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
 .pb-2 {
   padding-bottom: 0.5rem;
 }
@@ -3692,6 +3677,10 @@ html {
 
 .pt-2 {
   padding-top: 0.5rem;
+}
+
+.pb-4 {
+  padding-bottom: 1rem;
 }
 
 .text-center {
@@ -3726,6 +3715,11 @@ html {
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
 }
 
 .font-bold {
@@ -3845,9 +3839,27 @@ a:hover, i:hover{
   padding: 1rem;
 }
 
-@media (min-width: 1280px) {
-  div.index{
-    height: 900px;
+/* md */
+
+@media (min-width: 768px) {
+  p{
+    font-size: 1.25rem;
+    /* 20px */
+    line-height: 1.75rem;
+    /* 28px */
+  }
+}
+
+/* 2-xl */
+
+@media (min-width: 1536px) {
+  .navbar li{
+    font-size: 5rem;
+    line-height: 2.5rem;
+  }
+
+  .index-container{
+    height: 850px;
   }
 }
 
@@ -3924,6 +3936,11 @@ a:hover, i:hover{
     padding-bottom: 1.25rem;
   }
 
+  .md\:px-2 {
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
+  }
+
   .md\:navbar {
     display: flex;
     align-items: center;
@@ -3971,14 +3988,6 @@ a:hover, i:hover{
     grid-column: span 5 / span 5;
   }
 
-  .lg\:col-start-2 {
-    grid-column-start: 2;
-  }
-
-  .lg\:mb-0 {
-    margin-bottom: 0px;
-  }
-
   .lg\:block {
     display: block;
   }
@@ -4007,18 +4016,6 @@ a:hover, i:hover{
     flex-direction: row-reverse;
   }
 
-  .lg\:content-center {
-    align-content: center;
-  }
-
-  .lg\:content-end {
-    align-content: flex-end;
-  }
-
-  .lg\:content-between {
-    align-content: space-between;
-  }
-
   .lg\:border-b-2 {
     border-bottom-width: 2px;
   }
@@ -4040,44 +4037,47 @@ a:hover, i:hover{
 }
 
 @media (min-width: 1280px) {
-  .xl\:w-11\/12 {
-    width: 91.666667%;
-  }
-
-  .xl\:max-w-3xl {
-    max-width: 48rem;
-  }
-
-  .xl\:max-w-7xl {
-    max-width: 80rem;
-  }
-
   .xl\:grid-cols-3 {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
+}
 
-  .xl\:text-4xl {
+@media (min-width: 1536px) {
+  .\32xl\:max-w-7xl {
+    max-width: 80rem;
+  }
+
+  .\32xl\:max-w-3xl {
+    max-width: 48rem;
+  }
+
+  .\32xl\:text-4xl {
     font-size: 2.25rem;
     line-height: 2.5rem;
   }
 
-  .xl\:text-2xl {
+  .\32xl\:text-2xl {
     font-size: 1.5rem;
     line-height: 2rem;
   }
 
-  .xl\:text-lg {
+  .\32xl\:text-lg {
     font-size: 1.125rem;
     line-height: 1.75rem;
   }
 
-  .xl\:btn-lg
+  .\32xl\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
+  }
+
+  .\32xl\:btn-lg
     .btn.loading:before {
     height: 1.25rem;
     width: 1.25rem;
   }
 
-  .xl\:btn-lg {
+  .\32xl\:btn-lg {
     height: 4rem;
     padding-left: 1.5rem;
     padding-right: 1.5rem;
@@ -4085,20 +4085,20 @@ a:hover, i:hover{
     font-size: 1.125rem;
   }
 
-  .btn-square:where(.xl\:btn-lg) {
+  .btn-square:where(.\32xl\:btn-lg) {
     height: 4rem;
     width: 4rem;
     padding: 0px;
   }
 
-  .btn-circle:where(.xl\:btn-lg) {
+  .btn-circle:where(.\32xl\:btn-lg) {
     height: 4rem;
     width: 4rem;
     border-radius: 9999px;
     padding: 0px;
   }
 
-  .xl\:input-md {
+  .\32xl\:input-md {
     height: 3rem;
     padding-left: 1rem;
     padding-right: 1rem;
