--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -6,10 +6,10 @@
     <div class="card w-4/5 md:w-full bg-base-100 shadow-xl mx-auto">
       <figure><img src="<%= property[i].images[0].url%>" alt="Shoes" /></figure>
       <div class="card-body">
-        <h2 class="card-title"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
+        <h2 class="card-title 2xl:text-xl"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
         <!-- <p><%= property[i].title%></p> -->
         <div class="card-actions justify-end">
-          <a href="/property/<%= property[i]._id%>"><button class="btn btn-primary">View Property</button></a>
+          <a href="/property/<%= property[i]._id%>"><button class="btn btn-primary 2xl:btn-lg">View Property</button></a>
         </div>
       </div>
     </div>
