--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,21 +1,21 @@
 <%- include('partials/header') -%>
 
-<div class="w-full px-4 py-4 sm:py-4 flex flex-col lg:flex-row-reverse content-center items-center justify-center gap-7">
+<div class="w-full px-4 py-4 sm:py-4 flex flex-col lg:flex-row-reverse content-center items-center justify-center gap-7 index-container">
 
   <!-- img -->
-  <div class="xl:max-w-7xl lg:max-w-lg md:max-w-md max-w-sm">
+  <div class="2xl:max-w-7xl lg:max-w-lg md:max-w-md max-w-sm">
   <img src="/images/young_people.jpg" alt="" class="justify-self-center">
   </div>
 <!-- text -->
   <div class="text-center self-center">
-    <div class="xl:max-w-3xl lg:max-w-lg md:max-w-xl md:mx-auto ">
-      <h3 class="text-2xl xl:text-4xl md:text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
-      <p class="py-3 xl:text-2xl">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
+    <div class="2xl:max-w-3xl lg:max-w-lg md:max-w-xl md:mx-auto ">
+      <h3 class="text-2xl 2xl:text-4xl md:text-3xl font-bold">Rate Your Rental: The Ultimate Review Platform for Renters</h3>
+      <p class="py-3 2xl:text-2xl">Take control of your rental experience. Share honest assessments of your property and landlord with a community of like-minded renters. Help others make informed decisions and make your voice heard. Sign up now and elevate your rental journey!</p>
       <% if(loggedInUser == undefined){ %>   
-      <a href="/signup"><button class="btn btn-sm xl:btn-lg btn-primary">Sign up today</button></a>
-      <a href="/feed"><button class="btn btn-sm xl:btn-lg btn-primary">See reviews</button></a>
+      <a href="/signup"><button class="btn btn-sm 2xl:btn-lg btn-primary">Sign up today</button></a>
+      <a href="/feed"><button class="btn btn-sm 2xl:btn-lg btn-primary">See reviews</button></a>
       <% } %>
-      <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %> xl:text-2xl">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.
+      <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %> 2xl:text-2xl">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.
       <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
         <div class="alert alert-danger"><%= el.msg %></div>
         <% }) %> <% } %> <% if (locals.messages.info) { %> <%
@@ -23,11 +23,11 @@
         <div class="alert alert-info"><%= el.msg %></div>
         <% }) %> <% } %>
     <form class="search--form pt-4" action="/property/search/property" method="GET">
-      <label class="block uppercase tracking-wide text-gray-700 text-xs xl:text-lg font-bold mb-2" for="grid-property-address">
+      <label class="block uppercase tracking-wide text-gray-700 text-xs 2xl:text-lg font-bold mb-2" for="grid-property-address">
         Find your next property today!
       </label>
       <input
-          class="input input-sm xl:input-md input-bordered input-primary w-72"
+          class="input input-sm 2xl:input-md input-bordered input-primary w-72"
           type="text"
           name="property"
           placeholder="Search"
