--- a/views/property.ejs
+++ b/views/property.ejs
@@ -3,18 +3,16 @@
 <!-- header -->
 <div> <!-- whole property div-->
     <div>
-        <h1 class="text-2xl font-bold"> <%= property.streetName%>, <%= property.postcode%></h1>
+        <h1 class="text-2xl 2xl:text-4xl font-bold"> <%= property.streetName%>, <%= property.postcode%></h1>
     </div>
 <!-- images in grid-->
 <div class="grid gap-4 md:grid-cols-2 border-b-2 border-primary-focus">
   <% for(var i=0; i<review.length; i++) {%>
     <!-- image -->
-    <% if(review[i].image) {%>
-    <div class="w-full">
+    <div class="w-full py-2">
       <img src="<%= review[i].image%>" class="w-full">
       <p>Image posted by <%= review[i].user.userName%></p>
   </div>
-  <% } %>
   <% } %>
 </div>
 <!-- review -->
