redundant files removed and edit profile moved into profile route

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -4,7 +4,7 @@
         <div class="hero-content flex-col lg:flex-row-reverse">
           <div class="card flex-shrink-0 w-full shadow-2xl bg-base-200">
             <div class="card-body">
-              <form class="w-full max-w-lg" action="/edit/editProfile" enctype="multipart/form-data" method="POST">
+              <form class="w-full max-w-lg" action="/profile/editProfile" enctype="multipart/form-data" method="POST">
                 <div class="flex flex-wrap -mx-3 mb-6 justify-center">
                 <h1 class="text-2xl font-bold pb-2">Edit your profile</h1>
                   <!-- change profile photo -->
