--- a/views/reviews.ejs
+++ b/views/reviews.ejs
@@ -28,14 +28,14 @@
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
         Street name and number
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="streetName" name="streetName"/>
+      <input type="text" placeholder="Street name" value="<%= streetName %>"class="input input-bordered input-primary w-full" id="streetName" name="streetName"/>
     </div>
     <!-- postcode -->
     <div class="w-full md:w-1/3 px-3">
       <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2" for="grid-property-address">
         Postcode
       </label>
-      <input type="text" placeholder="Type here" class="input input-bordered input-primary w-full" id="postcode" name="postcode"/>
+      <input type="text" placeholder="Postcode" value="<%= postcode %>" class="input input-bordered input-primary w-full" id="postcode" name="postcode"/>
     </div>
   </div>
   <!-- tenancy to and from -->
