--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -1,5 +1,5 @@
 <%- include('partials/header') -%>
-<div class="p-5">
+<div class="py-4 sm:p-5">
   <!-- row 1 -->
   <div class="grid gap-4 lg:grid-cols-3 md:grid-cols-2 ">
       <% for(var i=0; i<property.length; i++) {%>
