search results page added, now search by postcode instead of street name and show error if no properties found

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -55,8 +55,8 @@
               <input
                   class="input input-bordered"
                   type="text"
-                  name="property"
-                  placeholder="Search"
+                  name="postcode"
+                  placeholder="Search by postcode"
               >
               <button class="search--btn" type="submit">
                   <i class="search--icon fa-solid fa-magnifying-glass"></i>
@@ -93,8 +93,8 @@
               <input
                   class="border-b-1"
                   type="text"
-                  name="property"
-                  placeholder="Search"
+                  name="postcode"
+                  placeholder="Search by postcode"
               />
           </form></li>
           <li class="mx-1"><a href="/signup">Sign up</a></li>
@@ -106,8 +106,8 @@
             <input
                 class="border-b-1"
                 type="text"
-                name="property"
-                placeholder="Search"
+                name="postcode"
+                placeholder="Search by postcode"
             />
         </form></li>
         <li class="mx-1"><a href="/feed">Feed</a></li>
