--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,12 +16,6 @@
       <a href="/feed"><button class="btn btn-sm 2xl:btn-lg btn-primary">See reviews</button></a>
       <% } %>
       <p class="<% if(loggedInUser == undefined){ %>pt-3<% } %> 2xl:text-2xl">Our mission is to empower renters in the UK to make informed decisions and elevate their rental experience. We aim to provide a platform where renters can openly and honestly share their experiences with properties and landlords, while fostering a supportive community of like-minded individuals. Through our platform, we strive to promote transparency and accountability in the rental industry, ultimately benefiting all renters in the UK.
-      <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
-        <div class="alert alert-danger"><%= el.msg %></div>
-        <% }) %> <% } %> <% if (locals.messages.info) { %> <%
-        messages.info.forEach( el => { %>
-        <div class="alert alert-info"><%= el.msg %></div>
-        <% }) %> <% } %>
     <form class="search--form pt-4" action="/property/search/property" method="GET">
       <label class="block uppercase tracking-wide text-gray-700 text-xs 2xl:text-lg font-bold mb-2" for="grid-property-address">
         Find your next property today!
@@ -30,7 +24,7 @@
           class="input input-sm 2xl:input-md input-bordered input-primary w-72"
           type="text"
           name="property"
-          placeholder="Search"
+          placeholder="Search by postcode"
       >
       <button class="search--btn" type="submit">
           <i class="search--icon fa-solid fa-magnifying-glass"></i>
