--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       <input
           class="input input-sm 2xl:input-md input-bordered input-primary w-72"
           type="text"
-          name="property"
+          name="postcode"
           placeholder="Search by postcode"
       >
       <button class="search--btn" type="submit">
