--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,12 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Rate your rental</title>
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="/imgs/favicon-32x32.png"
-    />
+<link rel="apple-touch-icon" sizes="180x180" href="/imgs/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/imgs/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/imgs/favicon-16x16.png">
+<link rel="manifest" href="/imgs/site.webmanifest">
+<link rel="mask-icon" href="/imgs/safari-pinned-tab.svg" color="#5bbad5">
+<meta name="msapplication-TileColor" content="#da532c">
+<meta name="theme-color" content="#ffffff">
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css"
       rel="stylesheet"
