--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -17,7 +17,8 @@
     <% for(var j=0; j<property[i].reviews.length; j++) {%>
       <% for(var l=0; l<reviews.length; l++) {%>
       <%if(reviews[l]._id == property[i].reviews[j]){ %>
-      <p><%= reviews[l].body%></p><br>
+      <h3>Review posted by <a href="/profile/<%= reviews[l].user.userName%>"><%= reviews[l].user.userName%></a></h3>
+      <p><%= reviews[l].body.split(" ").slice(0,30).join(" ")%> ...</p><br>
     <!-- <p><%= reviews%></p> -->
     <% } %>
     <% } %>
