--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -6,7 +6,7 @@
 <div class="lg:grid lg:grid-cols-3">
 <div class="lg:col-span-1 lg:block lg:border-b-2 border-primary-focus max-w-xl mx-auto">
       <div class="p-2 my-2 md:my-4">
-        <a href="/property/<%= property[i]._id%>"><img src="<%= property[i].images[0].url%>" class="w-full"></a>
+        <a href="/property/<%= property[i]._id%>"><img src="<%= property[i].images[0].url%>" class=" mx-auto w-4/5"></a>
       </div>
 </div>
 <div class="lg:col-span-2 border-b-2 border-primary-focus">
