--- a/public/style.css
+++ b/public/style.css
@@ -3328,6 +3328,10 @@ html {
   width: 9rem;
 }
 
+.w-4\/5 {
+  width: 80%;
+}
+
 .w-72 {
   width: 18rem;
 }
@@ -3336,20 +3340,12 @@ html {
   width: 1.5rem;
 }
 
-.w-4\/5 {
-  width: 80%;
-}
-
 .w-10 {
   width: 2.5rem;
 }
 
 .w-52 {
   width: 13rem;
-}
-
-.w-3\/5 {
-  width: 60%;
 }
 
 .max-w-lg {
@@ -3666,6 +3662,10 @@ a.black{
   color: black
 }
 
+a.hover-black:hover{
+  color: black
+}
+
 a:hover, i:hover{
   color: rgb(140, 100, 26)
 }
@@ -3818,6 +3818,11 @@ a:hover, i:hover{
     line-height: 2.25rem;
   }
 
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
   .md\:file-input-md {
     height: 3rem;
     padding-right: 1rem;
@@ -3910,6 +3915,11 @@ a:hover, i:hover{
   .\32xl\:text-xl {
     font-size: 1.25rem;
     line-height: 1.75rem;
+  }
+
+  .\32xl\:text-3xl {
+    font-size: 1.875rem;
+    line-height: 2.25rem;
   }
 
   .\32xl\:btn-lg
