--- a/views/searchResults.ejs
+++ b/views/searchResults.ejs
@@ -1,5 +1,6 @@
 <%- include('partials/header') -%>
 <div class="py-4 sm:p-5">
+  <h1 class="text-2xl 2xl:text-3xl font-bold pb-2">Search results: </h1>
   <!-- alert div-->
 <div class="mx-auto w-full md:w-2/5 px-5">
   <% if (locals.messages.errors) { %> <% messages.errors.forEach( el => { %>
@@ -21,17 +22,30 @@
 </div>
 
 
-  <div class="grid gap-4 lg:grid-cols-3 md:grid-cols-2 ">
-      <% for(var i=0; i<property.length; i++) {%>
-    <div class="card w-4/5 md:w-full bg-base-100 shadow-xl mx-auto">
-      <figure><img src="<%= property[i].images[0].url%>" alt="Shoes" /></figure>
-      <div class="card-body">
-        <h2 class="card-title 2xl:text-xl"><%= property[i].streetName%>, <%= property[i].postcode.toUpperCase()%></h2>
-        <!-- <p><%= property[i].title%></p> -->
-        <div class="card-actions justify-end">
-          <a href="/property/<%= property[i]._id%>"><button class="btn btn-primary 2xl:btn-lg">View Property</button></a>
-        </div>
+    <% for(var i=0; i<property.length; i++) {%>
+      <!-- review -->
+    <div class="lg:grid lg:grid-cols-3">
+    <div class="lg:col-span-1 lg:block lg:border-b-2 border-primary-focus max-w-xl mx-auto">
+          <div class="p-2 my-2 md:my-4">
+            <a href="/property/<%= property[i]._id%>"><img src="<%= property[i].images[0].url%>" class=" mx-auto w-4/5"></a>
+          </div>
+    </div>
+    <div class="lg:col-span-2 border-b-2 border-primary-focus">
+      <!-- outer review div-->
+      <div class="px-2 py-1 my-2 md:px-8 md:py-4 md:my-4">
+        <h3 class="text-xl 2xl:text-2xl font-bold pb-2"><a href="/property/<%= property[i]._id%>" class="black"><%= property[i].streetName%>, <%= property[i].postcode%></a></h3>
+        
+        <% for(var j=0; j<property[i].reviews.length; j++) {%>
+          <% for(var l=0; l<reviews.length; l++) {%>
+          <%if(reviews[l]._id == property[i].reviews[j]){ %>
+          <h3>Review posted by <a href="/profile/<%= reviews[l].user.userName%>"><%= reviews[l].user.userName%></a></h3>
+          <p><a href="/property/<%= property[i]._id%>" class="black hover-black"><%= reviews[l].body.split(" ").slice(0,30).join(" ")%> ...</a></p><br>
+        <!-- <p><%= reviews%></p> -->
+        <% } %>
+        <% } %>
+        <% } %>
       </div>
+    </div>
     </div>
     <% } %>
   </div>
