--- a/views/feed.ejs
+++ b/views/feed.ejs
@@ -18,8 +18,8 @@
       <% for(var l=0; l<reviews.length; l++) {%>
       <%if(reviews[l]._id == property[i].reviews[j]){ %>
       <h3>Review posted by <a href="/profile/<%= reviews[l].user.userName%>"><%= reviews[l].user.userName%></a></h3>
-      <p><a href="/property/<%= property[i]._id%>" class="black hover-black"><%= reviews[l].body.split(" ").slice(0,30).join(" ")%> ...</a></p><br>
-    <!-- <p><%= reviews%></p> -->
+      <p class="hidden md:block py-1"><a href="/property/<%= property[i]._id%>" class="black hover-black"><%= reviews[l].body.split(" ").slice(0,30).join(" ")%> ...</a></p>
+      <p class="md:hidden py-1"><a href="/property/<%= property[i]._id%>" class="black hover-black"><%= reviews[l].body.split(" ").slice(0,15).join(" ")%> ...</a></p>
     <% } %>
     <% } %>
     <% } %>
