--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -33,15 +33,15 @@
         <div class="">
           <div class="flex-none">
         <ul class="menu menu-horizontal px-1">
-          <li class="mx-1"><a href="/feed">Feed</a></li>
+          <li class="mx-1"><a href="/feed">Reviews</a></li>
           <% if(loggedInUser != undefined){ %>
           <li class="mx-1"><a href="/reviews">Create review</a></li>
           <li class="mx-1"><a href="/profile/edit">Edit profile</a></li>
           <% } %>
           <!-- show if not logged in -->
           <% if(loggedInUser == undefined){ %>          
-          <li class="mx-1"><a href="/signup">Sign up</a></li>
           <li class="mx-1"><a href="/login">Log in</a></li>
+          <li class="mx-1"><a href="/signup">Sign up</a></li>
           <% } else{ %> 
           <!-- show if logged in -->
           <li class="mx-1"><a href="/logout">Log out</a></li>
@@ -65,18 +65,16 @@
           </form>
           </div>
       </div>
-      <!-- avatar-->
+      <!-- avatar only if logged in -->
+      <% if(loggedInUser != undefined){ %>    
       <div class="">
         <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
           <div class="w-10 rounded-full">
-            <% if(loggedInUser == undefined){ %>    
-            <a href="/"><img src="/images/stock/profile-icon.png"/></a>
-            <% } else{ %> 
               <a href="/profile/<%= loggedInUser.userName%>"><img src="<%= loggedInUser.profilePhoto %>" /></a>
-            <% } %>
           </div>
         </label>
         </div>
+        <% } %>
 </div>
 
 <!-- small and mobile nav bar -->
@@ -84,25 +82,12 @@
   <div class="flex-1">
     <a class="btn btn-primary normal-case text-xl" href="/">Rate your rental</a>
   </div>
-  <div class="dropdown dropdown-end">
-    <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
-        
-        <!-- dropdown if not logged in -->
-        <% if(loggedInUser == undefined){ %>          
-          <li class="mx-1">
-            <form class="search--form" action="/property/search/property" method="GET">
-              <input
-                  class="border-b-1"
-                  type="text"
-                  name="postcode"
-                  placeholder="Search by postcode"
-              />
-          </form></li>
-        <li class="mx-1"><a href="/feed">Feed</a></li>
-        <li class="mx-1"><a href="/signup">Sign up</a></li>
-        <li class="mx-1"><a href="/login">Log in</a></li>
-        <% } else{ %> 
-        <!-- dropdown if logged in -->
+  <div class="navbar-end">
+    <div class="dropdown dropdown-end">
+      <label tabindex="0" class="btn btn-ghost btn-circle">
+        <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
+      </label>
+      <ul tabindex="0" class="mt-3 p-2 shadow menu menu-compact dropdown-content bg-base-100 rounded-box w-52">
         <li class="mx-1">
           <form class="search--form" action="/property/search/property" method="GET">
             <input
@@ -112,23 +97,20 @@
                 placeholder="Search by postcode"
             />
         </form></li>
-        <li class="mx-1"><a href="/feed">Feed</a></li>
+        <li class="mx-1"><a href="/feed">Reviews</a></li>
+
+        <!-- dropdown if not logged in -->
+        <% if(loggedInUser == undefined){ %>       
+        <li class="mx-1"><a href="/login">Log in</a></li>   
+        <li class="mx-1"><a href="/signup">Sign up</a></li>
+        <% } else{ %> 
+        <!-- dropdown if logged in -->
         <li class="mx-1"><a href="/reviews">Create review</a></li>
         <li class="mx-1"><a href="/profile/<%= loggedInUser.userName%>">Profile</a></li>
         <li class="mx-1"><a href="/profile/edit">Edit profile</a></li>
         <li class="mx-1"><a href="/logout">Log out</a></li>
         <% } %>
       </ul>
-      <div class="">
-        <label tabindex="0" class="btn btn-secondary btn-circle avatar mx-2">
-          <div class="w-10 rounded-full">
-            <% if(loggedInUser == undefined){ %>
-            <img src="/images/stock/profile-icon.png" />
-            <% } else{ %> 
-              <img src="<%= loggedInUser.profilePhoto %>" />
-            <% } %>
-          </div>
-        </label>
-        </div>
   </div>
+</div>
 </div>
