made the account deletion more comprehensive, mirrors the delete review method

--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -46,7 +46,7 @@
                   <form class="w-full max-w-lg" action="/profile/deleteProfile" enctype="multipart/form-data" method="POST">
                     <div class="flex flex-wrap -mx-3 justify-center">
                         <div class="w-full">
-                          <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 text-orange-800">Please be sure before pressing this, as it cannot be undone.</label>
+                          <label class="block uppercase tracking-wide text-gray-700 text-xs font-bold mb-2 text-orange-800">This will delete your profile and all corresponding reviews. This cannot be undone.</label>
                         <button type="submit" class="btn btn-error w-full">Delete account</button>
                       </div>
                     </div>
